examples/replicated-deployments/rome/complete.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gateway-wg-rome
  namespace: liqo-demo
  labels:
    app: gateway-wg-rome
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/hostname
            operator: In
            values:
            - europe-rome-edge  # Specifica il nodo desiderato
  containers:
  - name: wireguard
    image: linuxserver/wireguard
    securityContext:
      privileged: true
    volumeMounts:
    - mountPath: /etc/wireguard
      name: wireguard-config
    ports:
    - containerPort: 51820
      protocol: UDP
    - containerPort: 10000
      protocol: UDP
    command:
    - /bin/sh
    - -c
    - |
      [...]
  volumes:
  - name: wireguard-config
    configMap:
      name: wireguard-config-rome
  restartPolicy: Always
