examples/replicated-deployments/rome/laballed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gateway-wg-geneve
  namespace: liqo-demo
  labels:
    app: gateway-wg-rome
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/hostname
            operator: In
            values:
            - europe-rome-edge  # Specifica il nodo desiderato
  containers:
  - name: wireguard
    image: linuxserver/wireguard
    securityContext:
      capabilities:
        add:
        - NET_ADMIN
        - NET_RAW
      privileged: true
    volumeMounts:
    - mountPath: /etc/wireguard
      name: wireguard-config
    ports:
    - containerPort: 51820
      protocol: UDP
    command:
    - /bin/sh
    - -c
    - |
      sysctl -w net.ipv4.ip_forward=1 && \
      iptables -t nat -A POSTROUTING -o wg0 -j MASQUERADE && \
      tail -f /dev/null

  - name: geneve
    image: ghcr.io/liqotech/gateway/geneve:v1.0.0-rc.2
    securityContext:
      capabilities:
        add:
        - NET_ADMIN
        - NET_RAW
      privileged: true
    ports:
    - containerPort: 6091
      protocol: UDP
  volumes:
  - name: wireguard-config
    configMap:
      name: wireguard-config-rome  # ConfigMap con configurazione WireGuard
  restartPolicy: Always
