examples/replicated-deployments/rome/try_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wireguard-service
  namespace: liqo-tenant-europe-cloud
spec:
  selector:
    app: gateway-wg-rome
  ports:
    - protocol: UDP
      port: 51820
      targetPort: 51820
      nodePort: 30000
  type: NodePort
